--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ dependencies = [
 
 [project.scripts]
 vecsync = "vecsync:cli.cli"
+vs      = "vecsync.cli:cli"
 
 [build-system]
 requires = ["hatchling"]
