Add various code improvements for v0.0.2

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "vecsync"
-version = "0.1.0"
+version = "0.2.0"
 description = "A simple command-line utility for synchronizing documents to vector storage for LLM interaction."
 readme = "README.md"
 authors = [
@@ -40,6 +40,7 @@ dependencies = [
 
 [project.scripts]
 vecsync = "vecsync:cli.cli"
+vs = "vecsync.cli:cli"
 
 [build-system]
 requires = ["hatchling"]
