--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ classifiers = [
 dependencies = [
     "appdirs>=1.4.4",
     "click>=8.1.8",
+    "gradio>=5.27.1",
     "openai>=1.76.0",
     "pydantic>=2.11.3",
     "python-dotenv>=1.1.0",
