--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,14 +18,20 @@ keywords = [
 
 classifiers = [
     "Development Status :: 2 - Pre-Alpha",
-    "Environment :: Console",
+    "Intended Audience :: Developers",
     "Intended Audience :: Science/Research",
-    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
+    "Environment :: Console",
     "Operating System :: OS Independent",
-    "Programming Language :: Python :: 3.13",
+    "Operating System :: POSIX :: Linux",
+    "Operating System :: MacOS :: MacOS X",
+    "Operating System :: Microsoft :: Windows",
     "Programming Language :: Python :: 3",
-    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Programming Language :: Python :: 3.13",
+    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
     "Topic :: Utilities",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+    "Topic :: Scientific/Engineering :: Information Analysis",
 ]
 
 dependencies = [
@@ -40,7 +46,6 @@ dependencies = [
 ]
 
 [project.scripts]
-vecsync = "vecsync:cli.cli"
 vs = "vecsync.cli:cli"
 
 [build-system]
